--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -5,7 +5,8 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<form asp-action="Register" method="post">
+<form asp-action="Register" method="post" style="height : 90vh">
+    
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
