--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<form asp-action="Login" method="post">
+<form asp-action="Login" method="post" style="height:90vh">
     <div class="form-group">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
